# Communique

./: CMakeLists.txt  CommuniqueConfig.cmake.in  Dockerfile-buildenv  Dockerfile.build  README.md
include/: Communique.js
include/comm/: Client.h  Exceptions.h  IConnection.h  Server.h
include/communique/: Client.h  Exceptions.h  ICertificate.h  IConnection.h  Server.h
privateinclude/comm/impl/: Connection.h  Exceptions.h  Message.h  UniqueTokenStorage.h
privateinclude/communique/impl/: Certificate.h  Connection.h  Exceptions.h  Message.h  TLSHandler.h  UniqueTokenStorage.h  openSSLTools.h
privateinclude/communique/impl/openssltools/: X509CertificateDetails.h
src/: Certificate.cpp  Client.cpp  Connection.cpp  Exceptions.cpp  Message.cpp  Server.cpp  TLSHandler.cpp  TLSHandler_fallbackDiffieHellmanParameters_.cpp.in  X509CertificateDetails.cpp  openSSLTools.cpp
test/: ClientServerInteraction_test.cpp  Client_test.cpp  Server_test.cpp  security_test.cpp  testinputs.cpp  testinputs.cpp.in  testinputs.h
test/impl/: Certificate_test.cpp  UniqueTokenStorage_test.cpp  X509CertificateDetails_test.cpp  openSSLTools_test.cpp
test/testData/: certificateAuthority_cert.pem  client_cert.pem  client_key.pem  dh_param_2048.pem  expired_client_cert.pem  google_co_uk.cert.pem  server_cert.pem  server_key.pem
test/testData/old/: rootCA.pem  server.pem
test/testData/www/: Communique.js  serverTest.html
unitTests/: ClientServerInteraction_test.cpp  Client_test.cpp  security_test.cpp  testinputs.cpp  testinputs.h
unitTests/impl/: UniqueTokenStorage_test.cpp
unitTests/testData/: certificateAuthority_key.pem
